2001-08-14  Ulrich Weigand  <uweigand@de.ibm.com>

	* config/s390/linux64.h (CPP_PREDEFINES): Define __s390__
	also on 64-bit s390x targets.
 
2001-08-14  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>

	* doc/install.texi (Specific, avr): Fix markup.
	(Specific, c4x): Ditto.

2001-08-13  Andreas Jaeger  <aj@suse.de>

	* config.gcc: Use t-slibgcc-elf to build shared libgcc_s on
	s390*linux.

2001-08-13  Roman Zippel  <zippel@linux-m68k.org>
	    Richard Henderson  <rth@redhat.com>

	* regmove.c (regmove_optimize): Avoid setting a register twice in
	a parallel set.

2001-08-12  David Edelsohn  <edelsohn@gnu.org>

	Revert:
	2001-08-02  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
	* gcc.c (set_collect_gcc_options): New function, split out from
	main.
	Ignore elided switches.
	(do_spec_1): Invoke before executing command.
	(set_input): Export.
	Move declaration ...
	* gcc.h (set_input): ... here.
	* config/alpha/osf.h (ASM_FINAL_SPEC): Use %U.s to refer to input
	file.

2001-08-11  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>

	* doc/install.texi (Specific, c4x): Fix cross-reference to the
	main manual to work both for info and HTML versions.
	
2001-08-10  Ulrich Weigand  <uweigand@de.ibm.com>
 
 	* glimits.h (__LONG_MAX__): Add s390x as 64-bit architecture.

 	* config/s390/s390.c (legitimize_pic_address): Don't generate
	unnecessary moves (to avoid confusing loop optimization).
 	(check_and_change_labels): Replace jump_long by indirect_jump.
	(s390_final_chunkify): Don't start a new literal pool on section 
	switch in 64-bit code.
	(s390_va_start, s390_va_arg): Fixed incorrect sizes for 64-bit.
	
	* config/s390/s390.h (HARD_REGNO_MODE_OK, RETURN_IN_MEMORY):
	Support complex integer modes correctly.
	(reg_class, REG_CLASS_NAMES, REG_CLASS_CONTENTS): Remove CC_REGS.
	(EH_RETURN_HANDLER_RTX): Fixed incorrect offset for 64-bit.
	(CONST_COSTS): Fixed incorrect costs.

	* config/s390/s390.md (divsi3, modsi3): Clobber low word of